--- a/encrypt/templates/encrypt/CRY.html
+++ b/encrypt/templates/encrypt/CRY.html
@@ -5,18 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>이미지 암호화</title>
-    <link rel="stylesheet" href="../static/CRY.css">
+    <link rel="stylesheet" href="CRY.css">
 </head>
 <body>
     <!-- 메뉴바 -->
     <ui id = "nav"> 
-        <form method="get" action="{% url 'encrypt:go_decrypt' %}" accept-charset="UTF-8">
-        <li><input type="submit" name='redirect', value='encrypt'/></li></form>
         <li><a href = "#" onclick="window.open('home.html')">홈화면</a></li>
         <li><a href = "#" onclick="window.open('CRY.html')">암호화</a></li>
         <li><a href = "#" onclick="window.open('DEC.html')">복호화</a></li>
         <li><a href = "#" onclick="window.open('me.html')">제작자 소개</a></li>
-        
     </ui>
     <div class="container">
         <div class="title">이미지 암호화</div>
@@ -35,7 +32,7 @@
         <!-- 비밀키 입력 -->
         <div class="form-group">
             <label for="encryption-key"> 비밀키 입력 (미입력시 기본키 사용)</label>
-            <input type="password" id="encryption-key" placeholder="가능한 키 형식: 최소 4자, 문자 및 숫자 포함">
+            <input type="password" id="encryption-key" placeholder="가능한 키 형식: 최대20자, 문자 및 숫자 포함">
         </div>
         <!-- 프로필 사진 업로드 -->
         <div class="form-group">
@@ -46,16 +43,19 @@
         </div>
         <div class="form-group" id="profile-photo-group" style="display: none;">
             <label for="upload-profile-photo">프로필 사진 첨부 (JPG, PNG, 최대 5MB)</label>
-            <input type="file" id="upload-profile-photo" accept="image/*">
+            <div class="file-input-container">
+                <input type="file" id="upload-profile-photo" accept="image/*">
+            </div>
             <div id="profile-preview">
                 <img id="profile-photo-preview" src="#" alt="프로필 이미지 미리보기">
                 <span id="profile-photo-filename"></span>
             </div>
         </div>
+        
         <!-- 암호화  -->
         <button class = 'Sbutton', id="encrypt-button">암호화</button>
         <div id="encrypted-image">
-            <img id="encrypted-image-preview" src= "{{ crypto_image }}" alt="암호화 된 사진">
+            <img id="encrypted-image-preview" src="#" alt="암호화 된 사진">
             <button id="save-encrypted-photo">암호화 된 사진 저장</button>
         </div>
     </div>
@@ -96,13 +96,10 @@
         });
 
         document.getElementById('encrypt-button').addEventListener('click', function() {
-            // 여기에 암호화 로직을 추가하세요.
-            // 암호화 된 이미지를 'encrypted-image-preview'에 설정합니다.
             document.getElementById('encrypted-image').style.display = 'block';
         });
 
         document.getElementById('save-encrypted-photo').addEventListener('click', function() {
-            // 여기에 암호화 된 사진 저장 로직을 추가하세요.
         });
     </script>
 </body>
