--- a/menu/templates/menu/menu.html
+++ b/menu/templates/menu/menu.html
@@ -2,7 +2,7 @@
 
 
 <ui id = "nav"> 
-    <li><a href = "{% url 'home_index' %}" >홈화면</a></li>
+    <li><a href = "{% url 'home_index' %}" >홈</a></li>
     <li><a href = "{% url 'encrypt:index' %}" >암호화</a></li>
     <li><a href = "{% url 'decrypt:index' %}">복호화</a></li>
     <li><a href = "{% url 'aboutus_index' %}" >제작자 소개</a></li>
