--- a/decrypt/templates/decrypt/DEC.html
+++ b/decrypt/templates/decrypt/DEC.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="title">이미지 복호화</div>
         <div class="description">
-            사진을 복호화하는 방법에 대해 설명합니다. 복호화 후 사진의 모양, 걸리는 시간 등을 포함합니다.
+            암호화와 다른 비밀번호를 사용하거나, 이미지가 변형되었다면 복호화가 불가능합니다.
         </div>
         <!-- 복호화할 파일 업로드 upload-photo-->
     <form action="" method="post" class="form_group" enctype="multipart/form-data">
