--- a/templates/texts/me.html
+++ b/templates/texts/me.html
@@ -3,15 +3,27 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-	<link rel="stylesheet" href="{% static 'css/me.css' %}">
-  <link rel="stylesheet" href="{% static 'css/menu.css' %}">
+	<link rel="stylesheet" href="{% static "css/me.css" %}">
+  <link rel="stylesheet" href="{% static "css/menu.css" %}">
 
   <title>제작자소개</title>
 </head>
 <body>
+  <!-- 메뉴바 -->
   {% include "menu/menu.html" %}
-  
-  <h1>AES를 이용한 사진 암호화 및 복호화</h1>
+
+  <div class="creator">
+    <h2>김서현</h2>
+    <p>동서대학교 정보보안학과 20211216 </p>
+    <p>백엔드 개발자를 목표로 하고 있습니다.</p>
+    <p>연락처 : 4923hyun@naver.com</p>
+</div>
+
+<div class="creator">
+    <h2>정유진</h2>
+    <p>동서대학교 정보보안학과 20221259</p>
+    <p>연락처 : 777970@naver.com</p>
+</div>
 </body>
 
 </html>
